fix: urgencyEnum and add some testcases for coverage improvement(PRLC100-340)